--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>จดหมายลับจากใจ... 💌 เซอร์ไพรส์หวานๆ สำหรับเธอ</title>
+    <title>สุขสันต์วันครบรอบน๊าอ้วน🫶🏻🌻..💌 เซอร์ไพรส์หวานๆ สำหรับเธอ</title>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;700&family=Noto+Sans+Thai:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -118,19 +118,19 @@
 </head>
 <body>
     <div class="container">
-        <h1>จดหมายลับหวานๆ จากใจ... 💌</h1>
+        <h1>สุขสันต์วันครบรอบนะคั้บ🫶🏻🌻</h1>
         <p>เปิดเฉพาะเธอคนเดียวนะคะ 🥰</p>
         <div class="envelope" id="envelope">
             <div class="flap"></div>
         </div>
-        <p class="heart">💗</p>
+        <p class="heart">🥰</p>
 
         <input type="password" id="pinInput" placeholder="รหัสลับ 4 หลัก" maxlength="4">
         <button class="btn" onclick="checkPin()">เปิดจดหมายเซอร์ไพรส์</button>
 
         <div id="messageCard">
             <div class="floating-hearts" id="hearts"></div>
-            <h2>ถึงคนที่รักที่สุด ❤️</h2>
+            <h2>ถึงแฟนที่น่ารักที่สุด ❤️</h2>
             <p id="customMessage"></p>
             <img id="revealedImage" alt="รูปเซอร์ไพรส์">
             <p style="margin-top:30px; font-size:1.3em;">รักเธอเสมอนะ 💕</p>
@@ -138,7 +138,7 @@
     </div>
 
     <script>
-        const correctPin = "1234"; // เปลี่ยนเป็นรหัสของคุณเองนะครับ (เช่น วันสำคัญ)
+        const correctPin = "1305"; // เปลี่ยนเป็นรหัสของคุณเองนะครับ (เช่น วันสำคัญ)
 
         function checkPin() {
             const input = document.getElementById('pinInput').value;
@@ -147,7 +147,7 @@
                 document.getElementById('messageCard').style.display = 'block';
                 
                 // เปลี่ยนข้อความตรงนี้เลยครับ
-                document.getElementById('customMessage').innerText = "เธอรู้มั้ย... ทุกวันที่ได้เจอเธอ มันเหมือนโลกทั้งใบสดใสขึ้นเลยนะ 💗 ขอบคุณที่ทำให้ฉันยิ้มได้ทุกวัน รักเธอมากกกกกกกกก 🥹";
+                document.getElementById('customMessage').innerText = "สุขสันต์วันครบรอบน๊าอ้วนน ขอบคุณน๊าที่อยู่กับมาตั้ง10เดือนแย้ว นานมากเค้าขอให้เค้าเธออยู่ด้วยกันแบบนี้ไปตลอดเยยน๊า เค้าก็ขอโทษบางครั้งที่เค้าทำตัวไม่น่ารัก แต่เค้าก็รักเธอเหมือนเดิมนะตัวเล็กของเค้า อยู่กับเค้าไปตลอดเยยนะ🥰";
 
                 // ถ้าอยากใส่รูป: เอา URL รูปมาใส่ตรงนี้ (อัพโหลดไป imgur หรือ google drive ก่อน)
                 // document.getElementById('revealedImage').src = 'https://i.imgur.com/xxxxxx.jpg';
